--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "antd": "^4.11.2",
     "antd-mobile": "^2.3.4",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1"
